fix country align and margin cost of living

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -28,8 +28,8 @@
     color: white;
     opacity: 1;
     text-decoration: none;
-    background: #CD853F;
-    border: 1px solid #CD853F;
+    background: #f1ab86;
+    border: 1px solid #f1ab86;
   }
 }
 
@@ -48,7 +48,7 @@
     text-decoration: none;
     color: #095256;
     color: white;
-    
+
   }
 }
 
